--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body {
+  background-color: rgb(44, 44, 44);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.movieContainer {
+  width: 20%;
+  display: inline-block;
+  /* border: 1px solid white; */
+  padding: 1%;
+  margin: 2%;
+  position: relative;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.movieContainer img {
+  width: 100%;
+}
+
+.movieContainer h2 {
+  margin-bottom: 15%;
+}
+
+.detailsWrap {
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  bottom: 0;
+}
+
+.fadedText {
+  color: lightgrey;
+  font-size: 12px;
+  padding-bottom: 0;
+  margin-top: auto;
+}
+
+.goldRating {
+  color: gold;
+  font-weight: bold;
+}
+
+.libraryContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 2%;
+}
+
+.searchContainer {
+  margin: 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2%;
+}
+
+.searchContainer input {
+  width: 30%;
+  border-radius: 15px;
+  background-color: rgb(27, 27, 27);
+  color: white;
+  font-size: large;
+  padding: 10px;
+}
+
+@media all and (max-width: 1200px) {
+  .movieContainer {
+    width: 25%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media all and (max-width: 900px) {
+  .movieContainer {
+    width: 35%;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .movieContainer {
+    width: 50%;
   }
 }
