--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ body {
   position: relative;
 }
 
+.movieContainer img:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 15px 5px #F9D77E;
+}
+
 .movieContainer img {
   width: 100%;
 }
